parse.output
Terminals unused in grammar

   "adverb"


Grammar

    0 $accept: Code $end

    1 Code: Code Statement
    2     | Statement

    3 Statement: "expr" "noun" "end"
    4          | "noun" "auxillary_verb" "adjective" "end"
    5          | "noun" "auxillary_verb" "verb" "end"
    6          | "noun" "auxillary_verb" "verb" "noun" "end"
    7          | "pronoun" "auxillary_verb" "verb" "noun" "end"
    8          | "noun" "auxillary_verb" "article" "adjective" "noun" "end"
    9          | "pronoun" "auxillary_verb" "article" "adjective" "noun" "end"
   10          | "noun" "auxillary_verb" "adjective" "conjunction" "adjective" "end"
   11          | "noun" "verb" "preposition" "noun" "end"
   12          | "article" "noun" "verb" "preposition" "article" "noun" "end"
   13          | "noun" "auxillary_verb" "preposition" "noun" "end"
   14          | "noun" "auxillary_verb" "verb" "article" "noun" "end"
   15          | "auxillary_verb" "noun" "verb" "pmark"
   16          | Invalid

   17 Invalid: "noun" "expr" "end"
   18        | "noun" "adjective" "auxillary_verb" "end"
   19        | "auxillary_verb" "noun" "adjective" "end"
   20        | "adjective" "auxillary_verb" "noun" "end"
   21        | "verb" "auxillary_verb" "noun" "end"
   22        | "noun" "verb" "auxillary_verb" "end"
   23        | "auxillary_verb" "noun" "verb" "end"


Terminals, with rules where they appear

$end (0) 0
error (256)
"noun" (258) 3 4 5 6 7 8 9 10 11 12 13 14 15 17 18 19 20 21 22 23
"expr" (259) 3 17
"verb" (260) 5 6 7 11 12 14 15 21 22 23
"adverb" (261)
"adjective" (262) 4 8 9 10 18 19 20
"auxillary_verb" (263) 4 5 6 7 8 9 10 13 14 15 18 19 20 21 22 23
"conjunction" (264) 10
"article" (265) 8 9 12 14
"pronoun" (266) 7 9
"preposition" (267) 11 12 13
"pmark" (268) 15
"end" (269) 3 4 5 6 7 8 9 10 11 12 13 14 17 18 19 20 21 22 23


Nonterminals, with rules where they appear

$accept (15)
    on left: 0
Code (16)
    on left: 1 2, on right: 0 1
Statement (17)
    on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16, on right: 1 2
Invalid (18)
    on left: 17 18 19 20 21 22 23, on right: 16


State 0

    0 $accept: . Code $end

    "noun"            shift, and go to state 1
    "expr"            shift, and go to state 2
    "verb"            shift, and go to state 3
    "adjective"       shift, and go to state 4
    "auxillary_verb"  shift, and go to state 5
    "article"         shift, and go to state 6
    "pronoun"         shift, and go to state 7

    Code       go to state 8
    Statement  go to state 9
    Invalid    go to state 10


State 1

    4 Statement: "noun" . "auxillary_verb" "adjective" "end"
    5          | "noun" . "auxillary_verb" "verb" "end"
    6          | "noun" . "auxillary_verb" "verb" "noun" "end"
    8          | "noun" . "auxillary_verb" "article" "adjective" "noun" "end"
   10          | "noun" . "auxillary_verb" "adjective" "conjunction" "adjective" "end"
   11          | "noun" . "verb" "preposition" "noun" "end"
   13          | "noun" . "auxillary_verb" "preposition" "noun" "end"
   14          | "noun" . "auxillary_verb" "verb" "article" "noun" "end"
   17 Invalid: "noun" . "expr" "end"
   18        | "noun" . "adjective" "auxillary_verb" "end"
   22        | "noun" . "verb" "auxillary_verb" "end"

    "expr"            shift, and go to state 11
    "verb"            shift, and go to state 12
    "adjective"       shift, and go to state 13
    "auxillary_verb"  shift, and go to state 14


State 2

    3 Statement: "expr" . "noun" "end"

    "noun"  shift, and go to state 15


State 3

   21 Invalid: "verb" . "auxillary_verb" "noun" "end"

    "auxillary_verb"  shift, and go to state 16


State 4

   20 Invalid: "adjective" . "auxillary_verb" "noun" "end"

    "auxillary_verb"  shift, and go to state 17


State 5

   15 Statement: "auxillary_verb" . "noun" "verb" "pmark"
   19 Invalid: "auxillary_verb" . "noun" "adjective" "end"
   23        | "auxillary_verb" . "noun" "verb" "end"

    "noun"  shift, and go to state 18


State 6

   12 Statement: "article" . "noun" "verb" "preposition" "article" "noun" "end"

    "noun"  shift, and go to state 19


State 7

    7 Statement: "pronoun" . "auxillary_verb" "verb" "noun" "end"
    9          | "pronoun" . "auxillary_verb" "article" "adjective" "noun" "end"

    "auxillary_verb"  shift, and go to state 20


State 8

    0 $accept: Code . $end
    1 Code: Code . Statement

    $end              shift, and go to state 21
    "noun"            shift, and go to state 1
    "expr"            shift, and go to state 2
    "verb"            shift, and go to state 3
    "adjective"       shift, and go to state 4
    "auxillary_verb"  shift, and go to state 5
    "article"         shift, and go to state 6
    "pronoun"         shift, and go to state 7

    Statement  go to state 22
    Invalid    go to state 10


State 9

    2 Code: Statement .

    $default  reduce using rule 2 (Code)


State 10

   16 Statement: Invalid .

    $default  reduce using rule 16 (Statement)


State 11

   17 Invalid: "noun" "expr" . "end"

    "end"  shift, and go to state 23


State 12

   11 Statement: "noun" "verb" . "preposition" "noun" "end"
   22 Invalid: "noun" "verb" . "auxillary_verb" "end"

    "auxillary_verb"  shift, and go to state 24
    "preposition"     shift, and go to state 25


State 13

   18 Invalid: "noun" "adjective" . "auxillary_verb" "end"

    "auxillary_verb"  shift, and go to state 26


State 14

    4 Statement: "noun" "auxillary_verb" . "adjective" "end"
    5          | "noun" "auxillary_verb" . "verb" "end"
    6          | "noun" "auxillary_verb" . "verb" "noun" "end"
    8          | "noun" "auxillary_verb" . "article" "adjective" "noun" "end"
   10          | "noun" "auxillary_verb" . "adjective" "conjunction" "adjective" "end"
   13          | "noun" "auxillary_verb" . "preposition" "noun" "end"
   14          | "noun" "auxillary_verb" . "verb" "article" "noun" "end"

    "verb"         shift, and go to state 27
    "adjective"    shift, and go to state 28
    "article"      shift, and go to state 29
    "preposition"  shift, and go to state 30


State 15

    3 Statement: "expr" "noun" . "end"

    "end"  shift, and go to state 31


State 16

   21 Invalid: "verb" "auxillary_verb" . "noun" "end"

    "noun"  shift, and go to state 32


State 17

   20 Invalid: "adjective" "auxillary_verb" . "noun" "end"

    "noun"  shift, and go to state 33


State 18

   15 Statement: "auxillary_verb" "noun" . "verb" "pmark"
   19 Invalid: "auxillary_verb" "noun" . "adjective" "end"
   23        | "auxillary_verb" "noun" . "verb" "end"

    "verb"       shift, and go to state 34
    "adjective"  shift, and go to state 35


State 19

   12 Statement: "article" "noun" . "verb" "preposition" "article" "noun" "end"

    "verb"  shift, and go to state 36


State 20

    7 Statement: "pronoun" "auxillary_verb" . "verb" "noun" "end"
    9          | "pronoun" "auxillary_verb" . "article" "adjective" "noun" "end"

    "verb"     shift, and go to state 37
    "article"  shift, and go to state 38


State 21

    0 $accept: Code $end .

    $default  accept


State 22

    1 Code: Code Statement .

    $default  reduce using rule 1 (Code)


State 23

   17 Invalid: "noun" "expr" "end" .

    $default  reduce using rule 17 (Invalid)


State 24

   22 Invalid: "noun" "verb" "auxillary_verb" . "end"

    "end"  shift, and go to state 39


State 25

   11 Statement: "noun" "verb" "preposition" . "noun" "end"

    "noun"  shift, and go to state 40


State 26

   18 Invalid: "noun" "adjective" "auxillary_verb" . "end"

    "end"  shift, and go to state 41


State 27

    5 Statement: "noun" "auxillary_verb" "verb" . "end"
    6          | "noun" "auxillary_verb" "verb" . "noun" "end"
   14          | "noun" "auxillary_verb" "verb" . "article" "noun" "end"

    "noun"     shift, and go to state 42
    "article"  shift, and go to state 43
    "end"      shift, and go to state 44


State 28

    4 Statement: "noun" "auxillary_verb" "adjective" . "end"
   10          | "noun" "auxillary_verb" "adjective" . "conjunction" "adjective" "end"

    "conjunction"  shift, and go to state 45
    "end"          shift, and go to state 46


State 29

    8 Statement: "noun" "auxillary_verb" "article" . "adjective" "noun" "end"

    "adjective"  shift, and go to state 47


State 30

   13 Statement: "noun" "auxillary_verb" "preposition" . "noun" "end"

    "noun"  shift, and go to state 48


State 31

    3 Statement: "expr" "noun" "end" .

    $default  reduce using rule 3 (Statement)


State 32

   21 Invalid: "verb" "auxillary_verb" "noun" . "end"

    "end"  shift, and go to state 49


State 33

   20 Invalid: "adjective" "auxillary_verb" "noun" . "end"

    "end"  shift, and go to state 50


State 34

   15 Statement: "auxillary_verb" "noun" "verb" . "pmark"
   23 Invalid: "auxillary_verb" "noun" "verb" . "end"

    "pmark"  shift, and go to state 51
    "end"    shift, and go to state 52


State 35

   19 Invalid: "auxillary_verb" "noun" "adjective" . "end"

    "end"  shift, and go to state 53


State 36

   12 Statement: "article" "noun" "verb" . "preposition" "article" "noun" "end"

    "preposition"  shift, and go to state 54


State 37

    7 Statement: "pronoun" "auxillary_verb" "verb" . "noun" "end"

    "noun"  shift, and go to state 55


State 38

    9 Statement: "pronoun" "auxillary_verb" "article" . "adjective" "noun" "end"

    "adjective"  shift, and go to state 56


State 39

   22 Invalid: "noun" "verb" "auxillary_verb" "end" .

    $default  reduce using rule 22 (Invalid)


State 40

   11 Statement: "noun" "verb" "preposition" "noun" . "end"

    "end"  shift, and go to state 57


State 41

   18 Invalid: "noun" "adjective" "auxillary_verb" "end" .

    $default  reduce using rule 18 (Invalid)


State 42

    6 Statement: "noun" "auxillary_verb" "verb" "noun" . "end"

    "end"  shift, and go to state 58


State 43

   14 Statement: "noun" "auxillary_verb" "verb" "article" . "noun" "end"

    "noun"  shift, and go to state 59


State 44

    5 Statement: "noun" "auxillary_verb" "verb" "end" .

    $default  reduce using rule 5 (Statement)


State 45

   10 Statement: "noun" "auxillary_verb" "adjective" "conjunction" . "adjective" "end"

    "adjective"  shift, and go to state 60


State 46

    4 Statement: "noun" "auxillary_verb" "adjective" "end" .

    $default  reduce using rule 4 (Statement)


State 47

    8 Statement: "noun" "auxillary_verb" "article" "adjective" . "noun" "end"

    "noun"  shift, and go to state 61


State 48

   13 Statement: "noun" "auxillary_verb" "preposition" "noun" . "end"

    "end"  shift, and go to state 62


State 49

   21 Invalid: "verb" "auxillary_verb" "noun" "end" .

    $default  reduce using rule 21 (Invalid)


State 50

   20 Invalid: "adjective" "auxillary_verb" "noun" "end" .

    $default  reduce using rule 20 (Invalid)


State 51

   15 Statement: "auxillary_verb" "noun" "verb" "pmark" .

    $default  reduce using rule 15 (Statement)


State 52

   23 Invalid: "auxillary_verb" "noun" "verb" "end" .

    $default  reduce using rule 23 (Invalid)


State 53

   19 Invalid: "auxillary_verb" "noun" "adjective" "end" .

    $default  reduce using rule 19 (Invalid)


State 54

   12 Statement: "article" "noun" "verb" "preposition" . "article" "noun" "end"

    "article"  shift, and go to state 63


State 55

    7 Statement: "pronoun" "auxillary_verb" "verb" "noun" . "end"

    "end"  shift, and go to state 64


State 56

    9 Statement: "pronoun" "auxillary_verb" "article" "adjective" . "noun" "end"

    "noun"  shift, and go to state 65


State 57

   11 Statement: "noun" "verb" "preposition" "noun" "end" .

    $default  reduce using rule 11 (Statement)


State 58

    6 Statement: "noun" "auxillary_verb" "verb" "noun" "end" .

    $default  reduce using rule 6 (Statement)


State 59

   14 Statement: "noun" "auxillary_verb" "verb" "article" "noun" . "end"

    "end"  shift, and go to state 66


State 60

   10 Statement: "noun" "auxillary_verb" "adjective" "conjunction" "adjective" . "end"

    "end"  shift, and go to state 67


State 61

    8 Statement: "noun" "auxillary_verb" "article" "adjective" "noun" . "end"

    "end"  shift, and go to state 68


State 62

   13 Statement: "noun" "auxillary_verb" "preposition" "noun" "end" .

    $default  reduce using rule 13 (Statement)


State 63

   12 Statement: "article" "noun" "verb" "preposition" "article" . "noun" "end"

    "noun"  shift, and go to state 69


State 64

    7 Statement: "pronoun" "auxillary_verb" "verb" "noun" "end" .

    $default  reduce using rule 7 (Statement)


State 65

    9 Statement: "pronoun" "auxillary_verb" "article" "adjective" "noun" . "end"

    "end"  shift, and go to state 70


State 66

   14 Statement: "noun" "auxillary_verb" "verb" "article" "noun" "end" .

    $default  reduce using rule 14 (Statement)


State 67

   10 Statement: "noun" "auxillary_verb" "adjective" "conjunction" "adjective" "end" .

    $default  reduce using rule 10 (Statement)


State 68

    8 Statement: "noun" "auxillary_verb" "article" "adjective" "noun" "end" .

    $default  reduce using rule 8 (Statement)


State 69

   12 Statement: "article" "noun" "verb" "preposition" "article" "noun" . "end"

    "end"  shift, and go to state 71


State 70

    9 Statement: "pronoun" "auxillary_verb" "article" "adjective" "noun" "end" .

    $default  reduce using rule 9 (Statement)


State 71

   12 Statement: "article" "noun" "verb" "preposition" "article" "noun" "end" .

    $default  reduce using rule 12 (Statement)
